--- a/style.css
+++ b/style.css
@@ -1,2 +1,90 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;1,100;1,300;1,400&display=swap');
 
+*{
+    margin: 0;
+    padding: 0;
+}
+
+header{
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    position: relative;
+}
+
+.img-wrapper{
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    background-color: rgb(26, 26, 26);
+}
+.img-wrapper img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    opacity: 0.5;
+    animation: zoom 20s ease-in-out forwards;
+}
+@keyframes zoom{
+    0%{
+        transform: scale(1.3);
+    }
+    100%{
+        transform: scale(1);
+    }
+}
+.banner{
+    position: absolute;
+    left: 15%;
+    top: 30%;
+}
+.banner h1{
+    color: #fff;
+    font-size: 3.5rem;
+    font-family: "roboto", serif;
+    font-weight: 300;
+    text-shadow: .1rem .2rem 2px rgb(0, 0, 0, .4);
+    padding-bottom: 2rem;
+    animation: txt_in 1s forwards;
+}
+
+.banner p{
+    opacity: 0;
+    color: #fff;
+    font-family: "roboto", serif;
+    font-size: 2.2em;
+    font-weight: 200;
+    padding-bottom: 2rem;
+    animation: txt_in 1s 0.5s forwards;
+    
+}
+
+.banner button{
+    opacity: 0;
+    color: #000;
+    background: #D1913C;
+    background: -webkit-linear-gradient(to right, #FFD194, #D1913C);  
+    background: linear-gradient(to right, #FFD194, #D1913C); 
+    font-family: "roboto", serif;
+    font-weight: 500;
+    text-transform: uppercase;
+    border: 0px;
+    border-radius: 5px;
+    height: 50px;
+    width: 150px;
+    cursor: pointer;
+    animation: txt_in 1s 1s forwards;
+}
+
+@keyframes txt_in{
+    0%{
+        opacity: 0; transform: translateY(3rem);
+    }
+    100%{
+        opacity: 1; transform: translateY(0rem);
+    }
+}
+
+.banner button:hover{
+    transform: translate(2px, 2px);
+}
